--- a/src/style.scss
+++ b/src/style.scss
@@ -12,8 +12,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   background-color: #fff;
   color: #222222;
+
+  @media(prefers-color-scheme: dark) {
+    background-color: #222222;
+    color: #fff; 
+  }
 }
 
 #root {
@@ -27,20 +33,31 @@ body {
   padding: 15px;
 }
 
-@media(prefers-color-scheme: dark) {
-  body {
-    background-color: #222222;
-    color: #fff; 
-  }
+.sectionHeader {
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.sectionDescription {
+  font-size: 14px;
+  font-weight: 200;
+  margin-top: 0;
 }
 
 .drawingArea {
-  background-color: $testColor;
-  color: #fff;
+  width: 300px;
+  height: 300px;
+
+  background-color: #ececec;
+
+  @media(prefers-color-scheme: dark) {
+    background-color: #2e2e2e;
+  }
 }
 
 h1 {
   font-size: 36px;
+  margin-top: 0px;
 }
 
 code {
